@@ -59,7 +59,7 @@
     "PROJECT_AUTHORS" = (
 	"Riccardo Mottola"
     );
-    "PROJECT_COPYRIGHT" = "Copyright (C) 2006-2012";
+    "PROJECT_COPYRIGHT" = "Copyright (C) 2006-2013";
     "PROJECT_COPYRIGHT_DESC" = "Released under GPL";
     "PROJECT_CREATOR" = "";
     "PROJECT_DESCRIPTION" = "Image Viewer Tool";
