@@ -7,7 +7,7 @@
     Authors = (
 	"Riccardo Mottola"
     );
-    Copyright = "Copyright (C) 2006-2012";
+    Copyright = "Copyright (C) 2006-2013";
     CopyrightDescription = "Released under GPL";
     FullVersionID = "0.4";
     NSExecutable = LaternaMagica;
