@@ -1,3 +1,8 @@
+2013-01-01 Riccardo Mottola <rm@gnu.org>
+
+	* FileTable.m
+	Make the files to ignore list an array, no not accept unwanted files during drop validation.
+
 2012-12-31 Riccardo Mottola <rm@gnu.org>
 
 	* AppController.m
